force-app/main/default/objects/LLC_BI__Spread_Statement_Row_Mapping__c/fields/LLC_BI__Data_Source_Item__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Data_Source_Item__c</fullName>
    <description>This junction object links Underwriting Bundle, Data Source Item, and Spread Statement Record.</description>
    <label>Data Source Item</label>
    <referenceTo>LLC_BI__Data_Source_Item__c</referenceTo>
    <relationshipLabel>Spread Statement Row Mappings</relationshipLabel>
    <relationshipName>Spread_Statement_Row_Mappings</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>