force-app/main/default/objects/LLC_BI__Spread_Statement_Row_Mapping__c/fields/LLC_BI__Exclude__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Exclude__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox field controls if a given line item displays in the appropriate interface, allowing users to map data into Spreads.</description>
    <label>Exclude</label>
    <type>Checkbox</type>
</CustomField>