force-app/main/default/objects/LLC_BI__Spread_Statement_Row_Mapping__c/fields/LLC_BI__Spread_Statement_Record__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Spread_Statement_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This lookup field associates the Spread Statement Record to the Data Source Item and Underwriting Bundle.</description>
    <label>Spread Statement Record</label>
    <referenceTo>LLC_BI__Spread_Statement_Record__c</referenceTo>
    <relationshipLabel>Spread Statement Row Mappings</relationshipLabel>
    <relationshipName>Spread_Statement_Row_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>