force-app/main/default/objects/LLC_BI__Spread_Statement_Row_Mapping__c/fields/LLC_BI__Underwriting_Bundle__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Underwriting_Bundle__c</fullName>
    <description>This master-detail field associates the Underwriting Bundle to the Spread Statement Record and Data Source Item.</description>
    <label>Underwriting Bundle</label>
    <referenceTo>LLC_BI__Underwriting_Bundle__c</referenceTo>
    <relationshipLabel>Spread Statement Row Mappings</relationshipLabel>
    <relationshipName>Spread_Statement_Row_Mappings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>